--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main">
         </activity>
+        <activity android:name=".SduActivity">
+        </activity>
     </application>
 
 </manifest>
